<resources>
    <string name="app_name">Netmefy</string>
    <string name="slogan">El control de tu lado</string>

    <string name="error_login">El cliente no existe.</string>
    <string name="insert_client_number">Ingresar número de cliente:</string>
    <string name="insert_client_dni">Ingresar el DNI del titular:</string>
    <string name="error_dni">El número de usuario y/o DNI no son correctos.</string>
    <string name="accept">Aceptar</string>
    <string name="signin">Ingresar</string>

    <string name="setup_question">Cómo calificaría su intalación?</string>

    <string name="facebook_app_id">225322157975093</string>
    <string name="fb_login_protocol_scheme">fb225322157975093</string>

    <string name="prompt_password">Contraseña </string>
    <string name="action_sign_in">Ingresar</string>

    <string name="login_ingresando">Ingresando ...</string>

    <string name="title_activity_cliente">ClienteActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splash">splash</string>
    <string name="logout">Logout</string>
    <string name="me_gusta">Me gusta:</string>
    <string name="likes_recived">Se recibieron bien los likes</string>
    <string name="likes_not_recived">No se recibieron bien los likes</string>

    <string name="baseUrl">http://10.0.2.2:3001</string>
    <!--<string name="baseUrl">http://192.168.1.10:3001</string>-->
    <string name="urlLikesFromId">/isp/likesFromId</string>
    <string name="urlRate">/isp/rate/</string>
    <string name="urlLogin">/isp/login/</string>
    <string name="tech_user">Técnico</string>
    <string name="control_parental">Control Parental</string>
    <string name="set_de_pruebas">Set de Pruebas</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="gestiones">Gestiones</string>
    <string name="configuracion">Configuración</string>
    <string name="comprobar_servicio">Comprobar Servicio</string>
    <string name="reclamos_y_solicitudes">Reclamos y Solicitudes</string>
    <string name="avisos_y_promociones">Avisos y Promociones</string>
    <string name="nombre_de_wi_fi">Nombre de WI-FI:</string>
    <string name="clave">Clave:</string>
    <string name="router_white">router white</string>
    <string name="router_yellow">router yellow</string>
    <string name="router_green">router green</string>
    <string name="router_red">router red</string>
    <string name="buscar">Buscar</string>
    <string name="info">Info.</string>
    <string name="guardar">Guardar</string>
    <string name="cargar">Cargar</string>
    <string name="reset">Reset</string>
    <string name="download">download</string>
    <string name="save">save</string>
    <string name="search">search</string>
    <string name="cargando">Cargando...</string>
    <string name="solicitudes">Nueva Solicitud</string>
    <string name="solicitudes_historial">Historial de Solicitudes</string>
    <string name="reclamos">Nuevo Reclamo</string>
    <string name="reclamos_historial">Historia de Reclamos</string>
    <string name="fallas_en_servicios">Fallas en servicios</string>
    <string name="upgrades">Upgrades</string>
    <string name="ver_todos">Ver Todos</string>
    <string name="user">user</string>
    <string name="dispositivos">Dispositivos</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Notificacion">Notificación</string>
    <string name="calificar">Calificar</string>
    <string name="gestion">Gestion</string>

    <item
        type="id"
        name="device_mac" />

</resources>
